Changes in Version 1.2.2
  o INTERNAL CHANGE IN QGRAPH
    o A change has been made to the qgraph internal repressentation. First, qgraph() computed quite some parameters for the graph, then used them to plot and finally created an output model containing the arguments that allowed the plot to be plotted again. Now, qgraph() creates a model, and plot.qgraph() plots it (by default, plot.qgraph is now called at the end of qgraph()).
    o Because of this, every aspect of a graph can now be manually changed between running qgraph and plotting the output.
    o Currently this is implemented simply by storing all values in qgraph() that are used in plot.qgraph, in a future function some of the arguments from qgraph will be moved to plot.qgraph to make a more natural distinction between plotting arguments (such as filetype) and arguments that control the graph.
  o Using a matrix with relative positioning of nodes can now also be assigned characters of the node labels. e.g., assinging matrix(LETTERS[1:4],2,2) to 'layout' will place node labeled "A" at top left and "D" at bottom right.
  o Added 'pastel' argument for pastel colors
  o Added 'rainbowStart' argument to control the start of rainbow functions
  o Node and edge labels can now be assigned using a list.
  o Fixed a bug where tooltips could not be plotted with filetype='svg'. Tooltips now no longer require labels as well.
  o Using the filetype argument in combination with a legend (or filetype='svg') will now once again create a larger plotting window such that the graph is plotted in a square window.
  o graphNel objects can now result in undirected graphs 
  o pcalg objects will now result in mixed graphs.
  o Added 'nodeNames' argument, which can be used to make a legend based on node labels for every node.
  o Added 'legend.mode' argument to indicate if legend should be based on groups or node names.
  o Legend placement now takes the 'mar' argument into account.